fixed scrollbars and tabbar not showing selected tab

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h3 {
 }
 
 body {
+    overflow: hidden;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     background-color: #080808;
